# local-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  TERMS.md  build.sh  config.yml  pyproject.toml  run.sh
.github/workflows/: release.yml
desktop/: app.js  index.html  markdown.js  styles.css
docs/: shaping-desktop-app.md  shaping-release.md
extension/: manifest.json
extension/src/: api.js  background.js  chunker.js  constants.js  content.js  player.html  player.js  popup.css  popup.html  popup.js  store.js
service/: app.py
service/api/: export.py  health.py  preprocess.py  stop.py  stream.py  synthesize.py  voices.py
service/core/: audio.py  cache.py  chunking.py  config.py  dependencies.py  jobs.py  markdown.py  models.py
service/providers/: base.py  kokoro.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: test_config.py  test_dependencies.py  test_health.py  test_kokoro_provider.py  test_markdown.py
