[project]
name = "local-voice"
version = "1.0.3"
description = "Read selected text aloud using a local TTS engine."
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "kokoro>=0.9",
    "numpy",
    "pyyaml>=6.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
local-voice = "service.app:main"
