[package]
name = "local-voice-desktop"
version = "1.0.3"
description = "Desktop wrapper for the Local Voice TTS service."
authors = ["Majestic Labs LLC"]
license = "MIT"
repository = "https://github.com/majesticlabs/local-voice"
homepage = "https://majesticlabs.dev"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "local_voice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
